syntax = "proto3";



message RpcRequest {
  string reqId = 1;
  string method = 2;
  string traceId = 3;
  bytes payloadBytes = 4;
  string payloadString = 5;
  int32 sendTimeSecond = 6; //发送时间，秒
  int32 sendCount = 7; //尝试发送的次数
  bool needResp = 8; //是否需要resp
  int32 uid = 9; //必要时传入，用户uid，额外字段
}

message RpcResponse {
  string reqId = 1;
  string method = 2;
  string traceId = 3;
  bytes payloadBytes = 4;
  string payloadString = 5;
  int32 sendTimeSecond = 6; //发送时间，秒
  int32 code = 7 ; //返回的错误码
  string message = 8 ; //返回的错误码
  int32 uid = 9; //必要时传入，用户uid，额外字段
}

enum RpcErrCode{
  OK = 0;
  ERROR = 500;
  ERROR_NO_HANDLER = 501;
  ERROR_TIMEOUT = 502;
  ERROR_TOO_MANY_WAIT = 503;
  ERROR_WS_NOT_OPEN = 504;
}